--- a/site.css
+++ b/site.css
@@ -1,1 +1,23 @@
 /* Make Look Pretty */
+
+body {
+    background-color: antiquewhite;
+}
+
+main{
+    margin-top: 5%;
+    margin-left: 12%;
+    margin-right: 12%;
+    background-color: aliceblue;
+    border-block: solid;
+    border-color: brown;
+    border-width: 5px;
+}
+
+#title{
+    text-align: center;
+}
+
+#menu{
+    text-align: center;
+}
