--- a/public/site.css
+++ b/public/site.css
@@ -41,3 +41,11 @@ main{
     margin-left: 20px;
     font-style: italic;
 }
+
+#btnEvent{
+    background-color: cadetblue;
+    font-size: large;
+    padding: 20px,0px;
+    margin: 40px;
+    color: cornsilk;
+}
