--- a/public/site.css
+++ b/public/site.css
@@ -41,3 +41,17 @@ main{
     margin-left: 20px;
     font-style: italic;
 }
+
+#events{
+    text-align: center;
+}
+
+#event{
+    font-size: medium;
+    margin-left: 20px;
+}
+
+#eventLoc{
+    margin-left: 20px;
+    font-style: italic;
+}
