--- a/public/site.css
+++ b/public/site.css
@@ -56,3 +56,14 @@ main{
     margin-left: 20px;
     font-style: italic;
 }
+
+#menuimg{
+    border-block: solid;
+    border-color: brown;
+    border-width: 5px;
+    height: 75px;
+    float: left;
+    margin-left: 5px;
+    margin-right: 20px;
+
+}
