fixed events.html page and changed getEvent() to getEventById()

--- a/public/site.css
+++ b/public/site.css
@@ -85,6 +85,17 @@ form input {
     font-style: italic;
 }
 
+
+#eventLoc{
+    margin-left: 20px;
+    font-style: italic;
+}
+
+#eventTime{
+    margin-left: 20px;
+    font-style: italic;
+}
+
 #menuimg{
     border-block: solid;
     border-color: brown;
