Tweaked the /admin functionality to format and validate the form data to match what's already in the DB

--- a/public/site.css
+++ b/public/site.css
@@ -1,5 +1,9 @@
 /* Make Look Pretty */
 
+html {
+    height: 100vh;
+}
+
 body {
     background-color: antiquewhite;
     font-family: Georgia, 'Times New Roman', Times, serif;
