Added some padding and title to add_form

--- a/public/site.css
+++ b/public/site.css
@@ -40,6 +40,10 @@ form input {
 .columnTitle {
     text-align: center;
   }
+
+  .row {
+    padding: 10px 0px;
+  }
   
   /* Clear floats after the columns */
   .row:after {
